--- a/css/styles.css
+++ b/css/styles.css
@@ -8185,6 +8185,10 @@ textarea.form-control-lg {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
 }
+.bg-carousel {
+  --bs-bg-opacity: 1;
+  background-color: rgba(233, 238, 239,0.9) !important;
+}
 
 .bg-dark {
   --bs-bg-opacity: 1;
